[gd_scene load_steps=3 format=3 uid="uid://bir76ci3v0ib0"]

[ext_resource type="Script" uid="uid://bfev8s0jrwvkg" path="res://scripts/ui/SettingsScreen/settingsScreen.gd" id="1_r5km1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5km1"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.470588)

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r5km1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5km1")

[node name="DialogPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Options" type="VBoxContainer" parent="DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="FullscreenRow" type="HBoxContainer" parent="DialogPanel/MarginContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionLabel" type="Label" parent="DialogPanel/MarginContainer/Options/FullscreenRow"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="DialogPanel/MarginContainer/Options/FullscreenRow"]
layout_mode = 2

[node name="ResolutionRow" type="HBoxContainer" parent="DialogPanel/MarginContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionLabel" type="Label" parent="DialogPanel/MarginContainer/Options/ResolutionRow"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="DialogPanel/MarginContainer/Options/ResolutionRow"]
layout_mode = 2
item_count = 1
popup/item_0/id = 0

[node name="MusicVolumeRow" type="HBoxContainer" parent="DialogPanel/MarginContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionLabel" type="Label" parent="DialogPanel/MarginContainer/Options/MusicVolumeRow"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="DialogPanel/MarginContainer/Options/MusicVolumeRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Percentage" type="Label" parent="DialogPanel/MarginContainer/Options/MusicVolumeRow"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2

[node name="SoundVolumeRow" type="HBoxContainer" parent="DialogPanel/MarginContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionLabel" type="Label" parent="DialogPanel/MarginContainer/Options/SoundVolumeRow"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
text = "Sound Volume"

[node name="HSlider" type="HSlider" parent="DialogPanel/MarginContainer/Options/SoundVolumeRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Percentage" type="Label" parent="DialogPanel/MarginContainer/Options/SoundVolumeRow"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2

[node name="CloseWindow" type="Button" parent="DialogPanel"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="toggled" from="DialogPanel/MarginContainer/Options/FullscreenRow/CheckBox" to="." method="_on_fullscreen_option_pressed"]
[connection signal="drag_ended" from="DialogPanel/MarginContainer/Options/MusicVolumeRow/HSlider" to="." method="_on_music_volume_drag_ended"]
[connection signal="value_changed" from="DialogPanel/MarginContainer/Options/MusicVolumeRow/HSlider" to="." method="_on_music_volume_changed"]
[connection signal="drag_ended" from="DialogPanel/MarginContainer/Options/SoundVolumeRow/HSlider" to="." method="_on_sound_volume_drag_ended"]
[connection signal="value_changed" from="DialogPanel/MarginContainer/Options/SoundVolumeRow/HSlider" to="." method="_on_sound_volume_changed"]
[connection signal="pressed" from="DialogPanel/CloseWindow" to="." method="_on_close_window_pressed"]
